eps figures are converted to pdf

--- a/ms.tex
+++ b/ms.tex
@@ -664,8 +664,8 @@ The difference of the symbols indicates whether the radio emission can escape fr
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{figure}[htbp]
-   \plotoneh{model_planetaryB.pdf}
-   \plotoneh{model_planetaryB.pdf}
+   \plotoneh{radio_1Mp_5AU.pdf}
+   \plotoneh{radio_5Mp_5AU.pdf}
    \caption{.}
   \label{fig:observability}
 \end{figure}
