--- a/ms.tex
+++ b/ms.tex
@@ -647,7 +647,7 @@ The hashed regions indicate the parameter spaces where the radio emission from t
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
 
 In order to examine the potential to detect radio emission of RGHJs with the current and near-future instruments, we estimate the possible radio emission from actual red giants in the case that they have planetary companions around them. 
-For this purpose, we obtained the list of M-type red giants from Table 4 of \citet{dumm1998} with the values of mass, radius, and effective temperature, and also obtained the values of parallax from the original Hipparcos datasets \memoYF{cite something} to compute the distance. \memods{Dumm1988 is not in the biblio.bib file.}
+For this purpose, we obtained the list of M-type red giants from Table 4 of \citet{dumm1998} with the values of mass, radius, and effective temperature, and also obtained the values of parallax from the original Hipparcos datasets \memoYF{cite something} to compute the distance. \memoDS{Dumm1988 is not in the biblio.bib file.}
 
 For each red giant, the mass-loss rate is estimated by Reimers' equation \citep{reimers1975}:
 %%%
