citation of @ARTICLE{1998NewA....3..137D,

--- a/biblio.bib
+++ b/biblio.bib
@@ -2,12 +2,27 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Yuka Fujii at 2015-05-20 11:35:24 +0900 
+%% Created for Yuka Fujii at 2015-05-25 00:22:30 +0900 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{dumm1998,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/1998NewA....3..137D},
+	Author = {{Dumm}, T. and {Schild}, H.},
+	Date-Added = {2015-05-24 15:22:12 +0000},
+	Date-Modified = {2015-05-24 15:22:30 +0000},
+	Doi = {10.1016/S1384-1076(98)00003-7},
+	Journal = {New Astronomy},
+	Month = apr,
+	Pages = {137-156},
+	Title = {{Stellar radii of M giants}},
+	Volume = 3,
+	Year = 1998,
+	Bdsk-Url-1 = {http://dx.doi.org/10.1016/S1384-1076(98)00003-7}}
 
 @article{schild1989,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
