--- a/ms.tex
+++ b/ms.tex
@@ -14,6 +14,8 @@
 %\usepackage[dvipdfmx]{color}
 %\usepackage[dvipdfmx]{graphicx}
 
+% test edit
+
 \bibliographystyle{apj}
 
 \def\memoYF#1{\color{red}$[${\bf #1}$]$ \color{black}}
