Added description of counterintuitive effect to Abstract and changed .tex document layout of Abstract.

--- a/ms.tex
+++ b/ms.tex
@@ -128,14 +128,12 @@ dave@ias.edu
 
 
 \begin{abstract}
-  Red-giant hot Jupiters are jovian planets orbiting red-giant-branch
-  or asymptotic-giant-branch (AGB) stars.  Post-main-sequence stars
-  lose mass at much higher rates than main-sequence stars.  A jovian
-  planet passing through the dense winds of its AGB host can capture
-  stellar wind in its magnetosphere.  The cyclotron frequency of
-  electrons from the stellar wind accreting onto the planet scales as
-  100~MHz~$(B/30 {\rm~Gauss})$.  Such a planet might generate a radio
-  luminosity that would be visible from kiloparsec distances.
+  Red-giant hot Jupiters (RGHJs) are jovian planets orbiting red-giant-branch or asymptotic-giant-branch (AGB) stars.
+  Post-main-sequence stars lose mass at much higher rates than main-sequence stars.
+  A jovian planet passing through the dense winds of its RGB or AGB host can capture stellar wind in its magnetosphere, leading to cyclotron emission from electrons spiraling in the magnetic field.
+  The cyclotron frequency of electrons from the stellar wind accreting onto the planet scales as 100~MHz~$(B/30 {\rm~Gauss})$.
+  Counterintuitively, a plausible toy model suggests that a stronger planetary magnetic field leads to lower spectral flux density, and might therefore make objects more challenging to observe.
+  Still, for a range of planetary and stellar parameters, a RGHJ might generate a radio luminosity that would be visible from kiloparsec distances.
 \end{abstract}
 
 
