--- a/ms.tex
+++ b/ms.tex
@@ -151,8 +151,9 @@ dave@ias.edu
 
 
 Planets with strong magnetic fields may generate radio or X-ray emission when interacting with energetic charged particles. 
-It has been known that Jupiter emits radio emission from the radiation belt and auroral region due to the acceleration of the plasmas. \memoYF{?}. Potentially, large exoplanets can also emit radio waves through the similar mechanisms, depending on their intrinsic magnetic fields and the density of surrounding plasmas, e.g. stellar wind particles and particles from Io-like moons. 
-Radio emissions from exoplanets have been estimated taking account of several possible processes, based on the empirical scaling of the radio intensity with the solar wind flux \citep{zarka2001,griebmeier2007,noyola2014}. 
+It has been known that Jupiter emits radio emission from the radiation belt and auroral region due to the acceleration of the plasmas. \memoYF{?}.
+Potentially, large exoplanets can also emit radio waves through the similar mechanisms, depending on their intrinsic magnetic fields and the density of surrounding plasmas, e.g. stellar wind particles and particles from Io-like moons. 
+Radio emissions from exoplanets have been estimated taking account of several possible processes, based on the empirical scaling of the radio intensity with the solar wind flux \citep{zarka2001, griebmeier2007, hallinan_et_al2013, noyola2014}.
 Although the search for these radio signatures are being conducted, there is no clear detection claimed so far, while some indications were obtained \memoYF{?} \citep{lecavelier_et_al2013}. 
 %In general, there are four proposed models for a planet to emit radio wave \citep{griebmeier2007}: 1) the magnetic energy model, 2) kinetic energy model, 3) CME model, and 4) the unipolar interaction model. 
 %The search for these radio emissions from extrasolar Jovian planets has been performed. 
@@ -164,16 +165,18 @@ When stars less than $\sim$8~$M_\sun$ evolve off the main sequence,
 they go through stages on the red-giant branch (RGB) and the
 asymptotic-giant branch (AGB) where their radii and luminosities increase by orders of magnitude. 
 Jovian planets in orbit around such stars can be transiently heated to hot-Jupiter temperatures ($\sim$1000~K or more) at distances out to tens of AU, depending on the star's mass \citep{spiegel+madhusudhan2012}. 
-At the same time, they are subject to massive (but slow) stellar wind, as the mass-loss rate of such evolved stars are significantly higher than the main-sequence counterparts, ranging from $\sim  10^{-8} M_{\odot }$/yr to $\sim  10^{-5} M_{\odot }$/yr with the highest values for AGB stars \citep[e.g.,][]{reimers1975,schild1989,vassiliadis1993,schoier2001,vanloon2005}, significantly larger than solar mass-loss rate $\sim 10^{-14}M_{\odot }$/yr. 
+At the same time, they are subject to massive (but slow) stellar wind, as the mass-loss rate of such evolved stars are significantly higher than the main-sequence counterparts, ranging from $\sim  10^{-8} M_{\odot }$/yr to $\sim  10^{-5} M_{\odot }$/yr with the highest values for AGB stars \citep[e.g.,][]{reimers1975, schild1989, vassiliadis1993, schoier2001, vanloon2005}, significantly larger than solar mass-loss rate $\sim 10^{-14}M_{\odot }$/yr. 
 %\memoYF{to Jason: how these values are observationally obtained? Suggestions for relevant references?} 
 %stellar wind \citep{suzuki2008} \memoYF{To Jason: references?}. 
-On the assumption that the radio emission is correlated with the stellar wind, planetary companions around evolved stars could generate bright radio emission. 
+On the assumption that the radio emission is correlated with the stellar wind, planetary companions around evolved stars could generate bright radio emission.
 
-In this paper we estimate the potential to detect planetary companions around evolved stars through the brightness of their radio emission. 
+In this paper we estimate the potential to detect planetary companions around evolved stars through the brightness of their radio emission.
 %The search for such emission could tell us the population of companions around evolved stars, including those were originally A or O stars. 
-In \S2, we describe our assumptions for the scaling of planetary radio emission, stellar wind, and planetary magnetosphere.  
-\S3 estimates spectral radio intensity from RGHJs and compare them that from canonical hot Jupiters. 
-\S4 discusses possible obstacles to detect radio emission from RGHJs, in particular the effects of intrinsic radio emission of evolved stars and the  offsetting effect of the electrons spiraling down along the planetary magnetic field. Observability with current and near-future instruments is also examined in \S4. 
+In \S2, we describe our assumptions for the scaling of planetary radio emission, stellar wind, and planetary magnetosphere.
+\S3 presents a simple estimate of the spectral radio intensity of RGHJs and compares them with what might be expected from canonical hot Jupiters.
+\S3 also describes the surprising result that, although the planetary magnetic field is crucial to the generation of radio emission at all, there might be an important region in parameter space in which planets with stronger magnetic fields are less easily observable.
+\S4 discusses possible obstacles to detect radio emission from RGHJs, in particular the effects of intrinsic radio emission of evolved stars and the offsetting effect of the electrons spiraling down along the planetary magnetic field.
+Observability with current and near-future instruments is also examined in \S4. 
 Finally, \S5 concludes the paper with a brief summary. 
 % based on the number of targets in the observable volumes
 
@@ -419,6 +422,7 @@ The band width, $\Delta f$, is assumed to be proportional to the representative 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Estimate of Planetary Magnetic Field and Maximum Frequency}
+\label{ss:Bplanet}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%s
 
 First, we estimate the strength of planetary magnetic field based on the scaling relation of equation (\ref{eq:Bscaling}) and assumptions described in \S\ref{ss:magneticfield}. 
@@ -452,9 +456,10 @@ In this regime, there are a number of current and near-future radio wave detecto
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Estimate of Radio Intensity of RGHJs in comparison with canonical HJs}
+\label{ss:brightness}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-Based on the assumption that the radio emission is proportional to the input kinetic energy (equation (\ref{eq:Pinp_kin})), the scaling of the radio emission is expanded as follows: 
+Based on the assumption that the radio emission is proportional to the input kinetic energy (equation (\ref{eq:Pinp_kin})), the scaling of the radio emission is expanded as follows:
 %%%
 \begin{eqnarray}
 P_{\rm k,\,inp} &=& nv^3 r_s^2 = n v^3 \left( \frac{B^2}{2\pi m_{\rm p}nv^2} \right)^{1/3}  \\
@@ -463,9 +468,9 @@ P_{\rm k,\,inp} &=& nv^3 r_s^2 = n v^3 \left( \frac{B^2}{2\pi m_{\rm p}nv^2} \ri
 \end{eqnarray}
 %%%
 
-Now, we compare radio emission power of canonical hot jupiters and that of red giant hot jupiters. 
-Canonical values we adopt for planetary mass, orbital distance, and orbital period of each type as shown in Table \ref{tab:comp_HJ}. 
-Then, equation (\ref{eq:Pkinp}) can be re-normalized as follows. 
+Now, we compare radio emission power of canonical hot Jupiters and that of red giant hot Jupiters.
+Canonical values we adopt for planetary mass, orbital distance, and orbital period of each type as shown in Table \ref{tab:comp_HJ}.
+Then, equation (\ref{eq:Pkinp}) can be re-normalized as follows.
 %%%
 \begin{eqnarray}
 P_{\rm k,\,inp} 
@@ -533,7 +538,21 @@ RGHJ & $M_J$ & $B_J$ & 5 AU &  0.4 days \\ \hline
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
-Then, spectral radio flux observed at the Earth is:
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\subsection{Brighter Implies Harder to See: Greater $B$ Produces Lower $F_\nu$}
+\label{ss:counterintuitive}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+Per Eq.~(\ref{eq:Pkinp}), the total emitted power scales with $B^(2/3)$.
+In detail, it is not obvious how the power spectral density scales with a planet's surface magnetic field, because the emission process involves electrons passing through a wide range of magnetic field conditions (dipolar field strength drops off as $r^{-3}$, and only in an idealized model is a planet a perfect magnetic dipole).
+Nevertheless, a reasonable ansatz is that the radio emission is spread over a range of wavelengths in an approximately scale-independent way.
+In other words, the power spectral density is likely to scale as the total power divided by the cyclotron frequency corresponding to a characteristic field strength where the emission peaks.
+Since $f_{\rm cyclotron}$ scales as $B$ (a higher power of $B$ than the scaling of total power), this implies that the power spectral density in the radio scales as $B^{-1/3}$.
+Planets that are intrinsically brighter, owing to a greater magnetic field strength, probably have their emission spread out over a broader set of frequencies, and therefore have a lower flux density as measured in Janskys!
+\memoDS{Is this pointed out elsewhere in the literature?}
+
+Combining the expressions above for the dependence of radio emission on planetary magnetic field strength, we find that the radio spectral flux density observed at the Earth is:
 %%%
 \begin{eqnarray}
 F_{\nu} &=& \frac{P_{\rm radio}}{\Omega d^2 f_{\rm cyclotron}} \\
